# ROS-TIAGo-Routine

./: .gitignore  README.md  assignment2.rar  commands.txt
assignment2/: CMakeLists.txt  launch_movement.launch  package.xml  setup_env.launch
assignment2/action/: Detection.action  PickPlace.action
assignment2/src/: NodeA.cpp  NodeA.h  NodeB.cpp  NodeB.h  NodeC.cpp  NodeC.h
navigation/: CMakeLists.txt  launch_movement.launch  package.xml
navigation/action/: Custom.action
navigation/msg/: position.msg
navigation/src/: ProxyAction.cpp  ProxyAction.h  UserNode.cpp  UserNode.h  proxy_main.cpp  user_main.cpp
